--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,11 @@ body {
   background-image: -webkit-linear-gradient(45deg, #30ead0 15%, #4dc768 85%);
   background-image: -ms-linear-gradient(45deg, #30ead0 15%, #4dc768 85%);
   background-image: linear-gradient(45deg, #30ead0 15%, #4dc768 85%);*/
+      background-color: #B9F6CA;
 }
-
+footer {
+    color: #00796B;
+}
 
 
 .cuadro {
@@ -62,12 +65,8 @@ body {
     }
   }
 }
-
-#espacio{
-  background-color: red;
-}
-#iconos{
-  color: green;
+#iconos {
+    color: #00796B;
 }
 /* Por debajo de 700px */(
 @media screen and (max-width: 700px){
@@ -80,10 +79,10 @@ img {
 }
 /* Por debajo de 400px */(
 @media screen and (max-width: 400px){
-.cuadro{
-font-size:8px;
-}
-img {
+  .cuadro{
+    font-size:8px;
+  }
+  img {
     width:40%;
-}
+  }
 }
